# ghc912-static-nix

./: .gitignore  LICENSE  README.md  flake.nix  ghc912-static-nix.cabal  lambda-test.cabal
app/: Main.hs
scripts/: build.sh  dev-shell.sh  package-lambda.sh
