cabal-version:       >=1.24
name:                ghc912-static-nix
version:             0.1.0.0
build-type:          Simple

executable ghc912-static-nix
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
        base >=4.14 && <5
      , aeson
      , bytestring
